infrastructure/sidero/configs/capacitor.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: flux-system
  annotations:
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirectscheme@kubernetescrd,traefik-internal-ipallowlist@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ops.sidero.torreviejawireless.org
      secretName: sidero.torreviejawireless.org-tls
  rules:
    - host: ops.sidero.torreviejawireless.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: capacitor
                port:
                  name: http
