infrastructure/sidero/configs/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sidero.torreviejawireless.org
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.sidero.torreviejawireless.org`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - kind: TraefikService
          name: api@internal
          namespace: traefik
  tls:
    secretName: sidero.torreviejawireless.org-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sidero.torreviejawireless.org-http
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`{host:.+}`)
      kind: Rule
      middlewares:
        - name: redirectscheme
          namespace: traefik
      services:
        - name: noop@internal
          kind: TraefikService
          namespace: traefik
